class,object,inheritence

--- a/js/Cls-Obj-Inherit.html
+++ b/js/Cls-Obj-Inherit.html
@@ -49,3 +49,6 @@ class students{
       console.log(obj1.play_boidata());
   
 </script>
+<!-- What are Classes, Object in javascript in Hindi? Inheritance in JavaScript in Hindi.
+ JavaScript classes, introduced in ECMAScript 2015, 
+are primarily syntactical sugar over JavaScript's existing prototype-based inheritance.  -->
