--- a/js/call-method.html
+++ b/js/call-method.html
@@ -16,6 +16,6 @@
         name:"mukesh",
         content:"JavaScript"
     }
-    youtuber.feature.call(youtuber2,5);
+    youtuber.feature.apply(youtuber2,[5]);
    
 </script>
