--- a/js/apply-method.html
+++ b/js/apply-method.html
@@ -1,7 +1,19 @@
-<scropt>
+<script>
     <!-- What is apply() method in javascript.  Method Reuse
 With the apply() method, you can write a method that can be used on different objects. 
 The JavaScript apply() method is similar to the call() method.   -->
 
-
-</scropt>
+const youtuber = {
+    name:"muki",
+    content:"JS",
+    feature: function(rating){
+        console.log(` my name is ${this.name} and my favorite lang is ${this.content} my lucky no.${rating} `);
+    }
+}
+// youtuber.feature();
+const youtuber2 = {
+    name:"mukesh",
+    content:"JavaScript"
+}
+youtuber.feature.apply(youtuber2,[5]);
+</script>
