--- a/js/apply-method.html
+++ b/js/apply-method.html
@@ -1,7 +1,7 @@
 <script>
-    <!-- What is apply() method in javascript.  Method Reuse
-With the apply() method, you can write a method that can be used on different objects. 
-The JavaScript apply() method is similar to the call() method.   -->
+//      What is apply() method in javascript.  Method Reuse
+// With the apply() method, you can write a method that can be used on different objects. 
+// The JavaScript apply() method is similar to the call() method.
 
 const youtuber = {
     name:"muki",
